# swagger.json
@@ -2,7 +2,8 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "Polskie Winnice REST API"
+    "title": "Polskie Winnice REST API",
+    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
   "host": "polskiewinnice.ovh",
   "basePath": "/",
@@ -11,11 +12,13 @@
     "https"
   ],
   "consumes": [],
-  "produces": ["application/json"],
+  "produces": "application/json",
   "paths": {
     "/api/v1/vineyards": {
       "get": {
-        "tags": ["Vineyards"],
+        "tags": [
+          "Vineyards"
+        ],
         "summary": "Lists all vineyards",
         "description": "Lists all vineyards",
         "parameters": [],
@@ -31,7 +34,9 @@
     },
     "/api/v1/vineyards/{id}": {
       "get": {
-        "tags": ["Vineyards"],
+        "tags": [
+          "Vineyards"
+        ],
         "summary": "Get specific vineyard by ID",
         "description": "Get specific vineyard by ID",
         "parameters": [
@@ -54,9 +59,11 @@
     },
     "/api/v1/news/GetNewsList": {
       "post": {
-        "tags": ["News"],
-        "summary": "List all news",
-        "description": "List all news",
+        "tags": [
+          "News"
+        ],
+        "summary": "Lists all news",
+        "description": "Lists all news",
         "parameters": [],
         "responses": {
           "200": {
@@ -70,10 +77,20 @@
     },
     "/api/v1/news/categories": {
       "post": {
-        "tags": ["News"],
-        "description": "",
+        "tags": [
+          "News"
+        ],
+        "summary": "Lists all news categories",
+        "description": "Lists all news categories",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/api/v1/news/instagram": {
@@ -81,7 +98,14 @@
         "tags": [],
         "description": "",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/api/v1/news/facebook": {
@@ -89,23 +113,47 @@
         "tags": [],
         "description": "",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/api/v1/news/GetNewsCategoriesList": {
       "post": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "News"
+        ],
+        "summary": "Lists all news categories",
+        "description": "Lists all news categories",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/api/v1/paths": {
       "get": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "Paths"
+        ],
+        "summary": "Lists all paths",
+        "description": "Lists all paths",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/api/backoffice/vineyards": {
@@ -650,18 +698,38 @@
     },
     "/api/v1/provinces/GetNewsList": {
       "post": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "News"
+        ],
+        "summary": "Lists all news",
+        "description": "Lists all news",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/api/v1/provinces/categories": {
       "post": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "News"
+        ],
+        "summary": "Lists all news categories",
+        "description": "Lists all news categories",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/api/v1/provinces/instagram": {
@@ -669,7 +737,14 @@
         "tags": [],
         "description": "",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/api/v1/provinces/facebook": {
@@ -677,15 +752,29 @@
         "tags": [],
         "description": "",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/api/v1/provinces/GetNewsCategoriesList": {
       "post": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "News"
+        ],
+        "summary": "Lists all news categories",
+        "description": "Lists all news categories",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     }
   },
